Improved journey for damp, leak, mould
Resolves trello card
https://trello.com/c/ulPBgzNt/75-ko-journey-for-damp-vs-leak

--- a/db/questions.yml
+++ b/db/questions.yml
@@ -20,7 +20,7 @@ kitchen_problem:
       problem: Cupboards or Worktop
 
     - text: Damp or Mould
-      page: damp_and_mould
+      next: damp_or_mould
 
     - text: Electrical
       next: kitchen_electrical_problem
@@ -36,6 +36,9 @@ kitchen_problem:
 
     - text: Something else
       desc: kitchen_problem
+
+    - text: Drip or leak
+      next: kitchen_drip_or_leak
 
 kitchen_electrical_problem:
   question: Is your problem one of these?
@@ -64,6 +67,28 @@ kitchen_electrical_problem:
     - text: Something else
       desc: kitchen_problem
       problem: Electrical
+
+kitchen_drip_or_leak:
+  question: Is your problem one of these?
+  answers:
+    - text: Water dripping from a wall or ceilling
+      next: is_the_water
+
+    - text: Sink is leaking - containable
+      desc: inside_kitchen_sink_leaking
+      sor_code: 20060030
+      problem: Sink is leaking - containable
+
+    - text: Tap won't turn off - water running
+      page: emergency_contact
+
+    - text: Tap is dripping
+      sor_code: 20060030
+      problem: Tap is dripping
+
+    - text: Radiator is leaking - containable
+      sor_code: 4896816H
+      problem: Radiator is leaking - containable
 
 heating_problem:
   question: Is your problem one of these?
@@ -129,7 +154,7 @@ bathroom_problem:
       next: bath_problem
 
     - text: Damp or mould
-      page: damp_and_mould
+      next: damp_or_mould
 
     - text: Electrical
       next: bathroom_electrical_problem
@@ -140,8 +165,43 @@ bathroom_problem:
     - text: Toilet
       next: toilet_problem
 
+    - text: Drip or leak
+      next: bathroom_drip_or_leak
+
     - text: Something else
       desc: bathroom_problem
+
+bathroom_drip_or_leak:
+  question: Is your problem one of these?
+  answers:
+    - text: Water dripping from a wall or ceilling
+      next: is_the_water
+
+    - text: Basin / Sink is leaking - containable
+      desc: inside_bathroom_basin_leaking
+      sor_code: 20060020
+      problem: Basin / Sink is leaking - containable
+
+    - text: Tap won't turn off - water running
+      page: emergency_contact
+
+    - text: Tap is dripping
+      sor_code: 20060020
+      problem: Tap is dripping
+
+    - text: Bath is leaking - containable
+      desc: inside_bathroom_bath_leaking
+      sor_code: 20060020
+      problem: Bath is leaking - containable
+
+    - text: Toilet is leaking - containable
+      desc: inside_bathroom_toilet_leaking
+      sor_code: 20060020
+      problem: Toilet is leaking - containable
+
+    - text: Radiator is leaking - containable
+      sor_code: 4896816H
+      problem: Radiator is leaking - containable
 
 is_fan_leaking_water:
   question: Is there water leaking into or from the fan?
@@ -232,7 +292,7 @@ other_problem:
   question: What is the problem?
   answers:
    - text: Damp or mould
-     page: damp_and_mould
+     next: damp_or_mould
 
    - text: Electrical
      next: other_electrical_problem
@@ -254,9 +314,11 @@ other_problem:
    - text: Windows
      next: window_problem
 
+   - text: Drip or leak
+     next: other_drip_or_leak
+
    - text: Something else
      desc: describe_problem
-
 
 other_electrical_problem:
   question: Is your problem one of these?
@@ -289,6 +351,16 @@ other_electrical_problem:
       desc: electrical_problem
       problem: Electrical
 
+other_drip_or_leak:
+  question: Is your problem one of these?
+  answers:
+    - text: Water dripping from a wall or ceilling
+      next: is_the_water
+
+    - text: Radiator is leaking - containable
+      sor_code: 4896816H
+      problem: Radiator is leaking - containable
+
 window_problem:
   question: Is your problem one of these?
   answers:
@@ -309,7 +381,6 @@ window_problem:
     - text: Something else
       desc: window_problem
       problem: Window
-
 
 external_doors_problem:
   question: Is your problem one of these?
@@ -396,18 +467,92 @@ blocked_only_toilet:
       sor_code: 20060020
       problem: Toilet is blocked
 
-damp_or_mould_problem:
+is_ceilling_wall_dripping:
+  question: Is your ceiling or wall dripping?
+  answers:
+   - text: 'Yes'
+     next: is_the_water
+
+   - text: 'No'
+     next: damp_or_mould
+
+is_the_water:
+  question: Is the water
+  answers:
+   - text: Dripping onto electrics
+     page: emergency_contact
+
+   - text: Containable with a bucket, bowl or towel
+     next: water_source
+
+   - text: Not containable
+     page: emergency_contact
+
+water_source:
+  question: Is the water coming from within your property?
+  answers:
+    - text: 'Yes'
+      next: drip_source
+
+    - text: No, it’s coming from outside of my property
+      problem: Leak from outside property
+
+    - text: I'm not sure
+      problem: Leak from unknown source
+
+drip_source:
+  question: Is the source of the drip
+  answers:
+    - text: A pipe
+      sor_code: TODO - Plumber
+      problem: Water leaking from a pipe
+
+    - text: Condensation
+      sor_code: PRE00001
+      problem: Damp caused by condensation
+
+    - text: I'm not sure
+      problem: Leak inside the property unknown source
+
+damp_or_mould:
   question: Is your problem with damp or mould?
   answers:
     - text: Damp
-      desc: damp
-      sor_code: PRE00001
-      problem: Damp
+      next: external_pipes
 
     - text: Mould
-      desc: mould
-      sor_code: 08500820
-      problem: Mould
+      next: wet_wall
+
+    - text: Both
+      sor_code: PRE00001
+      problem: Damp and mould problem
 
     - text: I'm not sure
-      problem: Damp or mould
+      problem: Not sure if damp or mould
+
+external_pipes:
+  question: Are there any external pipes behind the wall?
+  answers:
+    - text: 'Yes'
+      sor_code: 20060030
+      problem: Damp where external pipes exist
+
+    - text: 'No'
+      problem: Damp where no external pipes
+
+    - text: I'm not sure
+      problem: Damp, no information about external pipes
+
+wet_wall:
+  question: Is the area around the mould wet?
+  answers:
+    - text: 'Yes'
+      problem: Wet mould
+
+    - text: 'No'
+      sor_code: 08500820
+      problem: Dry mould
+
+
+    - text: I'm not sure
+      problem: Mould, not sure if wet or dry
